Fix CI/CD: Use Docker Compose with existing prod config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,22 +82,21 @@ deploy-dev:
 # Deploy to production (Big NUC) - main branch only
 deploy-production:
   stage: deploy
-  image: docker:24-dind
-  services:
-    - docker:24-dind
-  variables:
-    DOCKER_HOST: tcp://docker:2375
-    DOCKER_TLS_CERTDIR: ""
+  tags:
+    - shell
   only:
     - main
   script:
-    - echo "Building and deploying on Big NUC..."
-    - docker build -t whiskey-inventory .
-    - docker stop whiskey-inventory || true
-    - docker rm whiskey-inventory || true
-    - docker run -d --name whiskey-inventory -p 3005:3005 --env-file .env.production --network host whiskey-inventory
-    - echo "Deployment complete! Check logs:"
-    - docker logs --tail 30 whiskey-inventory
+    - echo "Deploying using Docker Compose on Big NUC..."
+    - cd $CI_PROJECT_DIR
+    - docker compose -f docker-compose.yml -f docker-compose.prod.yml down || true
+    - docker compose -f docker-compose.yml -f docker-compose.prod.yml down --rmi all || true
+    - docker compose -f docker-compose.yml -f docker-compose.prod.yml build --no-cache
+    - docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d
+    - echo "Deployment complete! Checking container status..."
+    - docker compose -f docker-compose.yml -f docker-compose.prod.yml ps
+    - echo "Recent logs:"
+    - docker compose -f docker-compose.yml -f docker-compose.prod.yml logs --tail 30
   environment:
     name: production
     url: http://$DEPLOY_HOST:$DEPLOY_PORT
