--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,7 +19,7 @@ services:
       PORT: 3005
       
       # Database connection - using service name for internal communication
-      MONGODB_URI: mongodb://mongodb-web:27017/whiskey
+      MONGODB_URI: mongodb://mongodb-web:27017/whiskey-inventory
       
       # NextAuth configuration
       NEXTAUTH_URL: ${NEXTAUTH_URL:-http://192.168.1.71:3005}
