--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,6 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=${PORT:-3000}
-      # MongoDB connection - use host.docker.internal for Mac/Windows
-      # For Linux, you may need to use host network mode or actual IP
-      - MONGODB_URI=${MONGODB_URI:-mongodb://host.docker.internal:27017/whiskey-vault?replicaSet=rs0}
       - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:${PORT:-3000}}
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL:-http://localhost:${PORT:-3000}}
@@ -32,7 +29,7 @@ services:
       - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
       - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
     env_file:
-      - .env.production
+      - .env.local
     extra_hosts:
       # This allows the container to connect to the host machine
       - "host.docker.internal:host-gateway"
