Add MongoDB replica set support and update connection string

--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@ NODE_ENV=production
 PORT=3005
 
 # MongoDB on Big NUC
-MONGODB_URI=mongodb://mongodb-web:27017/whiskey-inventory
+MONGODB_URI=mongodb://mongodb-web:27017/whiskey-inventory?replicaSet=rs0
 
 # External MongoDB on Small NUC for FWGS data
 EXTERNAL_MONGODB_URI=mongodb://192.168.1.42:27017/stock_data?replicaSet=rs0
