Fix camera scanner duplicate views and scan result display issues
- Fixed duplicate camera bug by using unique IDs for each scanner instance
- Fixed missing bottle info on scan results page by populating masterBottleId
- Fixed field access to use masterBottle fields instead of userBottle fields
- Cleaned up bullet separators to only show when data exists
- Improved scanner cleanup to prevent race conditions

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "import-missing-fwgs": "tsx scripts/import-missing-fwgs.ts"
   },
   "dependencies": {
-    "@ericblade/quagga2": "^1.8.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.12.1",
     "@types/react": "^18.3.17",
@@ -33,6 +32,7 @@
     "cloudinary": "^2.7.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.9.4",
     "next": "14.2.24",
