--- a/public/manifest.json
+++ b/public/manifest.json
@@ -43,6 +43,9 @@
   "permissions": [
     "camera"
   ],
+  "features": [
+    "camera"
+  ],
   "prefer_related_applications": false,
   "categories": ["lifestyle", "productivity"],
   "shortcuts": [
